<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.rlm.AdvanceDrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navDrawer">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:background="@drawable/header"
                android:layout_height="@dimen/_80sdp"/>
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/logo"
                android:background="@drawable/bg_wight_circle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"/>
            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/menu"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_10sdp"/>
            <ImageView
                android:id="@+id/img_notification"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/bell"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_10sdp"/>
        </RelativeLayout>
        <fragment
            android:layout_below="@+id/header"
            android:id="@+id/nav_host_home"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_main" />
    </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:id="@+id/user_image"
                    android:src="@drawable/defult_user"/>
                <TextView style="@style/tv_header"
                    android:text="user Name"
                    android:gravity="center"
                    android:id="@+id/tv_user_name"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/main"
                    android:id="@+id/tv_main"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/what_about_us"
                    android:id="@+id/tv_what_about_us"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/appointment_booking"
                    android:id="@+id/tv_appointment_booking"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/our_service"
                    android:id="@+id/tv_our_service"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/statistics"
                    android:id="@+id/tv_statistics"
                    android:textColor="@color/white"/>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/call_us"
                    android:id="@+id/tv_call_us"
                    android:textColor="@color/white"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="horizontal">
                <TextView style="@style/tv_header_medium"
                    android:text="Language"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_language"
                    android:textColor="@color/white"/>
                    <Spinner
                        android:layout_toEndOf="@+id/tv_language"
                        android:id="@+id/spin_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_gravity="center_vertical"
                        android:entries="@array/change_language"/>
                </RelativeLayout>
                <TextView style="@style/tv_header_medium"
                    android:text="@string/logout"
                    android:id="@+id/tv_logout"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </com.rlm.AdvanceDrawerLayout>
</layout>