<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentUserType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/tv_header"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:progress="20"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        <RelativeLayout
            style="@style/et_parent">
            <Spinner
                android:id="@+id/sp_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/branch"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/et_parent">
            <Spinner
                android:id="@+id/sp_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/section"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/et_parent">
            <Spinner
                android:id="@+id/sp_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/doctor"/>
        </RelativeLayout>

        <TextView style="@style/et_parent"
            android:id="@+id/tv_date"
            android:hint="@string/select_date"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView style="@style/et_parent"
                android:layout_weight="1"
                android:id="@+id/tv_start_time"
                android:hint="@string/select_start_time"/>
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"/>
            <TextView style="@style/et_parent"
                android:layout_weight="1"
                android:id="@+id/tv_end_date"
                android:hint="@string/select_end_time"/>
        </LinearLayout>
        <Button style="@style/btn_blue"
            android:id="@+id/btn_next"
            android:text="@string/submit"/>

    </LinearLayout>
</ScrollView>
        <com.rlm.GifImageView
            android:id="@+id/loading"
            android:layout_margin="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>