<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.FragmentUserType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <ImageView
            android:id="@+id/img_back"
            style="@style/img_back" />

        <TextView
            android:id="@+id/tv_header"
            style="@style/tv_header"
            android:layout_below="@+id/img_back"
            android:text="@string/forgot_password" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/v_10">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/v_20" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/et_parent"
                    android:drawablePadding="@dimen/v_10"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/btn_blue"
                    android:layout_marginTop="@dimen/v_20"
                    android:text="@string/submit"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/v_50" />
            </LinearLayout>
        </ScrollView>
        <com.rlm.GifImageView
            android:id="@+id/loading"
            android:layout_margin="@dimen/_30sdp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>