<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.FragmentUserType">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/about_us"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/about_us"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_about"
                    android:text="@string/about_us" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/our_service"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/services"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_service"
                    android:text="@string/our_service"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/our_doctors"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/doctors"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_doctor"
                    android:text="@string/our_doctor"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/our_offer"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/offers"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_offer"
                    android:text="@string/our_offer"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/appointment"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/appointment"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_appointment"
                    android:text="@string/appointment"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/contact_us"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_3sdp">
                <ImageView
                    android:layout_above="@+id/tv_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/contact_us"
                    android:layout_gravity="center"/>
                <TextView style="@style/tv_home"
                    android:id="@+id/tv_contact_us"
                    android:text="@string/contact_us"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</layout>