<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentUserType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:progress="70"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        <TextView style="@style/tv_title"
            android:text="@string/below_you_will_find_available_time"/>
        <TextView style="@style/tv_home"
            android:id="@+id/tv_date"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="Tuesday, April 21"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_time_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />
        <TextView style="@style/tv_header_medium"
            android:id="@+id/tv_off1"
            android:visibility="gone"
            android:text="@string/doctor_not_available"
            android:gravity="center"/>

        <TextView style="@style/tv_home"
            android:id="@+id/tv_date2"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="Monday, April 20"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_time_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <TextView style="@style/tv_header_medium"
            android:id="@+id/tv_off2"
            android:visibility="gone"
            android:text="@string/doctor_not_available"
            android:gravity="center"/>
        <Button style="@style/btn_blue"
            android:id="@+id/btn_next"
            android:text="@string/next"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
        <com.rlm.GifImageView
            android:id="@+id/loading"
            android:layout_margin="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</layout>